--- a/index.ipynb
+++ b/index.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "4          23.20    2.26   4.22           0.58   30.26   88.00  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,33 +185,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "295"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "publisher = list(data['Publisher'])\n",
     "\n",
     "# Replace None with the appropriate value\n",
-    "count = None\n",
+    "count = 0\n",
+    "for i in publisher:\n",
+    "    if i == 'Nintendo':\n",
+    "        count += 1\n",
+    "count\n",
+    "\n",
     "# your code here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "295"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#__SOLUTION__\n",
     "count = 0\n",
     "for p in publisher:\n",
     "    if p == 'Nintendo':\n",
-    "        count += 1"
+    "        count += 1\n",
+    "count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,33 +282,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Replace None with the appropriate value\n",
-    "count_ea_2010 = None\n",
+    "count_ea_2010 = 0\n",
+    "for p,y in zip(publisher,year):\n",
+    "    if p == 'Electronic Arts' and y == 2010:\n",
+    "        count_ea_2010+=1\n",
+    " \n",
+    "count_ea_2010\n",
     "\n",
     "# your code here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#__SOLUTION__\n",
     "count_ea_2010 = 0\n",
     "\n",
     "for p,y in zip(publisher, year):\n",
     "    if p == 'Electronic Arts' and y == 2010:\n",
-    "        count_ea_2010+=1"
+    "        count_ea_2010+=1\n",
+    "count_ea_2010"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,31 +375,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "46"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Replace None with appropriate value\n",
-    "count_sonic = None\n",
+    "count_sonic = 0\n",
+    "for t in titles:\n",
+    "    if 'Sonic' in t:\n",
+    "        count_sonic+=1\n",
+    "count_sonic\n",
     "# your code here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "46"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#__SOLUTION__\n",
     "count_sonic = 0\n",
     "for title in titles:\n",
     "    if 'Sonic' in title:\n",
-    "        count_sonic+=1"
+    "        count_sonic+=1\n",
+    "count_sonic"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +479,9 @@
    "source": [
     "# Replace None with the appropriate value\n",
     "\n",
-    "publisher_genre_counts = None\n",
+    "publisher_genre_counts = {}\n",
+    "\n",
+    "\n",
     "\n",
     "# your code here\n"
    ]
